CSS/Navbar.css
body {
    margin-bottom: 128px;
}

nav svg {
    width: 32px;
    height: 32px;
}

nav svg * {
    color: inherit;
}

nav,
nav * {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    transition: all 0.25s ease-in-out;
}

nav {
    z-index: 1;
}

nav>#small {
    position: fixed;
    bottom: 0;
    display: flex;
    gap: 8px;
    padding: 0 32px 32px 32px;
    width: calc(100vw - 64px);
    flex-wrap: wrap;
    justify-content: center;
    /* allows for no action button layout*/
}

nav>#small>.tab-bar {
    display: flex;
    align-items: center;
    height: 64px;
    padding: 0 8px;
    flex: 1 1 0%;
    max-width: max-content;
    min-width: 0;
    justify-content: flex-start;
    gap: 0;
    position: relative;
    /* max-width: 304px; */
    /* at 475px viewport max width is 339px (-16 for padding), this was the calculated width, idk at what point the iPad does it but ok*/
    /* nvm, im just gonna cap each tab bar item to 86px, so 86*4-8*3-(16) */
    /* update, 112 instead to match apple's 106 (weird number, so i rounded to 64+48) */
}

nav>#small>.tab-bar>.tab-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1 1 0%;
    margin-left: -4px;
    margin-right: -4px;
    width: 112px;
    max-width: 112px;
    min-width: 0;
}

nav>#small>.tab-bar>.tab-item>p {
    font-size: 10px;
    white-space: nowrap;
}

nav>#small>.tab-bar>.tab-item#selected {
    color: #ff0080;
    position: relative;
}

nav>#small>.tab-bar>.tab-item#selected>svg {
    color: #ff0080;
}

nav>#small>.tab-bar>.tab-item#selected>p {
    color: #ff0080;
}

nav>#small>.tab-bar>.tab-item#selected::before {
    content: "";
    display: block;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    height: 56px;
    width: 100%;
    border-radius: 28px;
    background-color: rgba(0, 0, 0, 0.1);
    z-index: 2;
}

nav>#small>.accessory-bar {
    order: -1;
    width: calc(100vw - 64px);
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 8px 16px;
    gap: 8px;
}

nav>#small>.action-btn {
    width: 64px;
    height: 64px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 0 0 auto;
    margin-left: auto;
}

nav>#small.compact {
    gap: 8px;
    justify-content: flex-start;
}

nav>#small.compact>.tab-bar {
    height: 48px;
    width: 48px;
    padding: 0;
    flex: 0 0 auto;
}

nav>#small.compact>.tab-bar>.tab-item>p {
    display: none;
}

nav>#small.compact>.tab-bar>.tab-item:not(#selected) {
    display: none;
}

nav>#small.compact>.tab-bar>.tab-item#selected::before {
    display: none;
}

nav>#small.compact>.accessory-bar {
    order: 0;
    width: auto;
    flex: 1 1 0%;
}

nav>#small.compact>.action-btn {
    height: 48px;
    width: 48px;
}

nav>#medium {
    position: fixed;
    top: 32px;
    left: 50%;
    transform: translateX(-50%);
    justify-content: center;
    align-items: center;
    width: max-content;
}

nav>#medium>.tab-bar {
    display: flex;
    align-items: center;
    padding: 4px;
    gap: 8px;
}

nav>#medium>.tab-bar>.tab-item {
    padding: 8px 12px;
}

nav>#medium>.tab-bar>.tab-item#selected {
    position: relative;
}

nav>#medium>.tab-bar>.tab-item#selected>p {
    color: #ff0080;
}

nav>#medium>.tab-bar>.tab-item#selected::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 100%;
    width: 100%;
    border-radius: 28px;
    background-color: rgba(0, 0, 0, 0.1);
    z-index: 2;
    pointer-events: none;
}

nav>#medium>.tab-bar>svg {
    width: 24px;
    height: 24px;
}

nav>#medium>.tab-bar:not(:has(> svg:not(.removed) ~ svg:not(.removed)))>svg:not(.removed):first-child {
    margin-left: 12px;
    margin-right: 4px;
}

nav>#medium>.tab-bar:not(:has(> svg:not(.removed) ~ svg:not(.removed)))>svg:not(.removed):last-child {
    margin-left: 4px;
    margin-right: 12px;
}

nav>#medium>.tab-bar:has(> svg:first-child:not(.removed):not(:only-child)):has(> svg:last-child:not(.removed):not(:only-child))>svg:first-child {
    margin-left: 20px;
    margin-right: 16px;
}

nav>#medium>.tab-bar:has(> svg:first-child:not(.removed):not(:only-child)):has(> svg:last-child:not(.removed):not(:only-child))>svg:last-child {
    margin-left: 16px;
    margin-right: 20px;
}

nav>#medium>.tab-bar>.tab-item:hover {
    background-color: rgba(0, 0, 0, 0.05);
    border-radius: 28px;
    cursor: pointer;
}

nav>#large {
    position: fixed;
    top: 32px;
    left: 32px;
}

nav>#large>.tab-bar {
    width: 256px;
    height: calc(100dvh - 64px);
}

nav>#large>.tab-bar>.tab-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;
    margin: 0px 16px;
    padding: 8px 16px;
}

nav>#large>.tab-bar>.tab-item:first-child {
    margin-top: 56px;
}

nav>#large>.tab-bar>.tab-item#selected {
    color: #ff0080;
    position: relative;
}

nav>#large>.tab-bar>.tab-item#selected>svg {
    color: #ff0080;
}

nav>#large>.tab-bar>.tab-item#selected>p {
    color: #ff0080;
}

nav>#large>.tab-bar>.tab-item#selected::before {
    background-color: rgba(0, 0, 0, 0.1);
}

nav>#large>.tab-bar>.tab-item:hover {
    background-color: rgba(0, 0, 0, 0.05);
    border-radius: 28px;
    cursor: pointer;
}

nav>#large>.tab-bar>#nav-toggle {
    position: absolute;
    top: 16px;
    right: 16px;
    width: 24px;
    height: 24px;
}

@media (prefers-color-scheme: dark) {

    nav>#small>.tab-bar>.tab-item#selected::before,
    nav>#medium>.tab-bar>.tab-item#selected::before,
    nav>#large>.tab-bar>.tab-item#selected::before {
        background-color: rgba(255, 255, 255, 0.1);
    }

    nav>#medium>.tab-bar>.tab-item:hover {
        background-color: rgba(255, 255, 255, 0.05);
    }
}

@media (max-width: 699px) {

    nav>#medium,
    nav>#large {
        display: none !important;
    }
}

@media (min-width: 700px) {
    body {
        margin-bottom: 16px;
    }

    body:not(:has(header)):has(nav > #large[style*="display: none"]) {
        margin-top: 112px;
    }

    body:has(nav > #large:not([style*="display: none"])) {
        margin-left: calc(256px + 64px);
        /* MARGINZ HORIZONTALLY DO NOT OVERLAP, BUT VERTICALLY THEY DO */
    }

    nav>#small {
        display: none;
    }

    nav>#medium {
        display: flex;
    }
}

